k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-scoutid
  labels:
    app: discord-scoutid
spec:
  type: ClusterIP
  selector:
    app: discord-scoutid
  ports:
    - name: http
      port: 80
      targetPort: http
